--- a/tailwindcss/_tests/public/index.html
+++ b/tailwindcss/_tests/public/index.html
@@ -6,10 +6,33 @@
     <title>Tests</title>
     <link rel="stylesheet" href="output.css">
 </head>
-<body class="w-screen h-screen flex justify-center items-center gap-x-4 gap-y-4">
-    <div class="size-60 bg-red-500 text-4xl text-white w-1/3 text-center">Container A</div>
-    <div class="size-60 bg-red-500 text-4xl text-white w-1/3 text-center">Container A</div>
-    <div class="size-60 bg-red-500 text-4xl text-white w-1/3 text-center">Container A</div>
+<body class="h-screen bg-teal-400 flex flex-col">
+<header class="flex basis-20 bg-orange-400 justify-end">
+    <div class="basis-1/2 bg-orange-800 flex justify-evenly py-2">
+        <button class="border-2 px-4 py-2 bg-slate-700 text-white rounded-lg">Button A</button>
+        <button class="border-2 px-4 py-2 bg-slate-700 text-white rounded-lg">Button B</button>
+        <button class="border-2 px-4 py-2 bg-slate-700 text-white rounded-lg">Button C</button>
+    </div>
+</header>
+<main class="bg-lime-700 flex basis-1/2 gap-x-4 p-8">
+<div class="bg-red-700 basis-1/2 flex flex-col gap-y-4 justify-center p-4">
+    <div class="bg-blue-400 basis-1/3"></div>
+    <div class="bg-blue-400 basis-1/3 flex justify-center py-2 gap-x-4 items-center">
+        <button class="border-2 px-4 py-2 bg-slate-700 text-white rounded-lg h-fit">Button B</button>
+        <button class="border-2 px-4 py-2 bg-slate-700 text-white rounded-lg h-fit ">Button C</button>
+    </div>
+</div>
+<div class="bg-red-700 basis-1/2"></div>
+</main>
 
+<footer class="flex basis-52 bg-violet-900 w-3/4 mx-auto p-4 gap-4">
+    <div class="basis-48 bg-black"></div>
+    <div class="basis-48 bg-black"></div>
+    <div class="basis-48 bg-black"></div>
+    <div class="basis-48 bg-black"></div>   
+    <div class="basis-48 bg-black"></div>
+    <div class="basis-48 bg-black"></div>   
+    <div class="basis-48 bg-black"></div>
+</footer>
 </body>
 </html>
