--- a/tailwindcss/projects/diane/src/index.html
+++ b/tailwindcss/projects/diane/src/index.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body class="min-h-screen">
+  <body class="min-h-screen w-screen">
     <p class="bg-black p-1 text-center text-white">
       Get 25% Off this summer Sale. Grab it fast!! <strong>15H:45M:25S</strong>
     </p>
@@ -28,13 +28,199 @@
           <li>Kids</li>
           <li>Cadeaux</li>
         </ul>
-        <span class="font-black text-4xl">Diane</span>
+        <span class="text-4xl font-black">Diane</span>
         <ul class="flex gap-x-6 text-xl">
           <li><i class="fa-solid fa-magnifying-glass"></i></li>
           <li><i class="fa-solid fa-bag-shopping"></i></li>
           <li><i class="fa-solid fa-right-to-bracket"></i></li>
         </ul>
       </header>
+
+      <div
+        class="flex h-96 w-full items-end rounded-2xl bg-[url('./assets/images/hero.jpg')] bg-cover p-5"
+      >
+        <div>
+          <h1 class="text-4xl font-bold uppercase text-white">
+            Diane nature collection
+          </h1>
+          <p class="font-light text-white">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+        </div>
+        <button class="absolute right-40 h-fit rounded-full bg-white px-4 py-2">
+          Shop now !
+        </button>
+      </div>
+
+      <div class="p-6 text-center">
+        <h1 class="text-4xl font-bold uppercase">New collection</h1>
+        <p class="font-light text-gray-600">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium
+          beatae earum aspernatur.
+        </p>
+      </div>
+
+      <div class="mx-auto flex w-11/12 flex-col">
+        <div class="flex gap-x-3">
+          <div class="w-1/3">
+            <div
+              class="h-72 rounded-2xl bg-[url('./assets/images/product-1.jpg')] bg-cover bg-center"
+            ></div>
+            <h3 class="pt-2 text-lg">Manteau</h3>
+            <p class="py-2 font-light text-gray-600">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas
+              animi molestias deleniti quae molestiae totam. Recusandae quod
+              aliq.
+            </p>
+            <h5 class="font-bold">$45</h5>
+          </div>
+          <div class="w-1/3">
+            <div
+              class="h-72 rounded-2xl bg-[url('./assets/images/product-2.jpg')] bg-cover bg-center"
+            ></div>
+            <h3 class="pt-2 text-lg">T-shirt</h3>
+            <p class="py-2 font-light text-gray-600">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas
+              animi molestias deleniti quae molestiae totam. Recusandae quod
+              aliq.
+            </p>
+            <h5 class="font-bold">$45</h5>
+          </div>
+          <div class="w-1/3">
+            <div
+              class="h-72 rounded-2xl bg-[url('./assets/images/product-3.jpg')] bg-cover bg-center"
+            ></div>
+            <h3 class="pt-2 text-lg">Lunettes</h3>
+            <p class="py-2 font-light text-gray-600">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas
+              animi molestias deleniti quae molestiae totam. Recusandae quod
+              aliq.
+            </p>
+            <h5 class="font-bold">$45</h5>
+          </div>
+        </div>
+        <div class="mb-2 mt-4 flex gap-x-3">
+          <div class="w-1/3">
+            <div
+              class="h-72 rounded-2xl bg-[url('./assets/images/product-4.jpg')] bg-cover bg-center"
+            ></div>
+            <h3 class="pt-2 text-lg">Chaussures</h3>
+            <p class="py-2 font-light text-gray-600">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas
+              animi molestias deleniti quae molestiae totam. Recusandae quod
+              aliq.
+            </p>
+            <h5 class="font-bold">$45</h5>
+          </div>
+          <div class="w-1/3">
+            <div
+              class="h-72 rounded-2xl bg-[url('./assets/images/product-5.jpg')] bg-cover bg-center"
+            ></div>
+            <h3 class="pt-2 text-lg">Montres</h3>
+            <p class="py-2 font-light text-gray-600">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas
+              animi molestias deleniti quae molestiae totam. Recusandae quod
+              aliq.
+            </p>
+            <h5 class="font-bold">$45</h5>
+          </div>
+          <div class="w-1/3">
+            <div
+              class="h-72 rounded-2xl bg-[url('./assets/images/product-6.jpg')] bg-cover bg-center"
+            ></div>
+            <h3 class="pt-2 text-lg">Pantalons</h3>
+            <p class="py-2 font-light text-gray-600">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas
+              animi molestias deleniti quae molestiae totam. Recusandae quod
+              aliq.
+            </p>
+            <h5 class="font-bold">$45</h5>
+          </div>
+        </div>
+      </div>
+
+      <div class="mx-auto mt-8 w-4/5 space-y-4 text-center">
+        <div
+          class="h-72 rounded-2xl bg-[url('./assets/images/wedding.png')] bg-center"
+        ></div>
+        <h1 class="text-2xl uppercase">wear to wedding</h1>
+        <p class="font-light text-gray-600">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores
+          laudantium nisi, blanditiis dolorem soluta li.
+        </p>
+        <button class="rounded-full bg-black px-4 py-2 text-white">
+          See details
+        </button>
+      </div>
+
+      <div class="mx-auto mt-8 flex w-3/5 gap-x-4">
+        <div
+          class="flex h-96 w-1/3 flex-col justify-end space-y-2 rounded-xl bg-[url('./assets/images/man.jpg')] bg-cover pb-2 pl-4"
+        >
+          <h1 class="text-3xl font-medium uppercase text-white">Homme</h1>
+          <button class="w-fit rounded-full bg-white px-5 py-2 text-black">
+            See details
+          </button>
+        </div>
+        <div
+          class="flex h-96 w-1/3 flex-col justify-end space-y-2 rounded-xl bg-[url('./assets/images/woman.jpg')] bg-cover pb-2 pl-4"
+        >
+          <h1 class="text-3xl font-medium uppercase text-white">Femme</h1>
+          <button class="w-fit rounded-full bg-white px-5 py-2 text-black">
+            See details
+          </button>
+        </div>
+        <div
+          class="flex h-96 w-1/3 flex-col justify-end space-y-2 rounded-xl bg-[url('./assets/images/kids.jpg')] bg-cover pb-2 pl-4"
+        >
+          <h1 class="text-3xl font-medium uppercase text-white">Enfants</h1>
+          <button class="w-fit rounded-full bg-white px-5 py-2 text-black">
+            See details
+          </button>
+        </div>
+      </div>
     </div>
+
+    <footer class="flex gap-x-4 justify-center mt-12 p-4">
+      <div class="flex flex-col w-1/2 space-y-2">
+        <h1 class="text-2xl font-bold">Diane</h1>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad harum,
+          cum ullam atque aspernatur ea quia.
+        </p>
+        <div class="flex gap-x-4">
+        <input type="email" placeholder="adresse Email" class="px-3 rounded-full py-2 border w-fit">
+        <button type="submit" class="px-4 py-2 bg-black rounded-full text-white w-fit">Soumettre</button>
+      </div>
+      </div>
+
+      <div>
+        <h2 class="font-bold text-lg m-2">Product</h2>
+        <ul class="text-gray-600">
+          <li><a href="">Lien</a></li>
+          <li><a href="">Lien</a></li>
+          <li><a href="">Lien</a></li>
+          <li><a href="">Lien</a></li>
+        </ul>
+      </div>
+      <div>
+        <h2 class="font-bold text-lg m-2">Categories</h2>
+        <ul>
+          <li><a href="">Lien</a></li>
+          <li><a href="">Lien</a></li>
+          <li><a href="">Lien</a></li>
+          <li><a href="">Lien</a></li>
+        </ul>
+      </div>
+      <div>
+        <h2 class="font-bold text-lg m-2">Social Medias</h2>
+        <ul class="text-gray-600">
+          <li><a href="">Lien</a></li>
+          <li><a href="">Lien</a></li>
+          <li><a href="">Lien</a></li>
+          <li><a href="">Lien</a></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
