working on main content

--- a/html-css/projects/cafe/index.html
+++ b/html-css/projects/cafe/index.html
@@ -22,5 +22,17 @@
         </ul>
       </nav>
     </header>
+    <section class="vp">
+      <div class="vp-content">
+        <h1>Toute l'expertise Française dans un café</h1>
+        <div class="separator"></div>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio recusandae consectetur modi pariatur
+          animi officiis reprehenderit, nemo hic assumenda deserunt tenetur repellat obcaecati ullam est vitae?
+          Laudantium exercitationem mollitia nisi?
+        </p>
+        <a href="./where.html" class="btn btn-primary my-10">DECOUVRIR</a>
+      </div>
+    </section>
   </body>
 </html>
