--- a/html-css/projects/cafe/index.html
+++ b/html-css/projects/cafe/index.html
@@ -10,6 +10,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/17061d8796.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header class="header">
@@ -34,5 +35,36 @@
         <a href="./where.html" class="btn btn-primary my-10">DECOUVRIR</a>
       </div>
     </section>
+    <section class="features">
+      <div class="container">
+        <div class="feature">
+          <i class="fas fa-coffee fa-3x my-10"></i>
+          <h2>Un nouveau café par jour</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus magni suscipit consectetur vel modi
+            molestias obcaecati nulla similique id sed.
+          </p>
+        </div>
+        <div>
+          <i class="fas fa-clock fa-3x my-10" ></i>
+          <h2>Ouvert 24h/24 7j/7</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus magni suscipit consectetur vel modi
+            molestias obcaecati nulla similique id sed.
+          </p>
+        </div>
+      </div>
+    </section>
+    <div class="person">  </div>
+    <section class="reservation">
+      <div class="container">
+        <h2>Réserver dès maintenant</h2>
+        <p  >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ducimus minus exercitationem, earum possimus illo voluptatum assumenda deleniti repellendus eum praesentium quidem, natus, nisi doloremque? Corporis sapiente sint quia reprehenderit!</p>
+        <a href="./contact.html" class="btn btn-dark my-20">RESERVEZ</a>
+      </div>
+    </section>
+    <footer>
+      <p>Copyright &#9400; Florette - 2019</p>
+    </footer>
   </body>
 </html>
